# omniops-agent

./: .env.example  .env.live.example  .gitignore  Makefile  README.md  benchmark_report.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  graph.py  investigation_agent.py  log_agent.py  memory_agent.py  metric_agent.py  planner_agent.py  reflection_agent.py  report_agent.py  state.py  trace_agent.py  tracing.py  triage_agent.py
app/api/: __init__.py  approvals.py  demo.py  harness.py  incidents.py  knowledge.py  observability.py  (+2 more)
data/: diagnostic_scenarios.json  observability_external_example.json
deploy/: docker-compose.observability.yml
docs/: agent_harness_design.md  architecture.md  diagnostic_capability_matrix.md  github_release_checklist.md  interview_walkthrough.md  live_demo_verification.md  rag_knowledge_base.md  real_project_integration.md  skills_design.md
scripts/: check_repo_safety.py  check_runtime_status.py  demo_live.sh  generate_demo_traffic.py  ingest_knowledge_base.py  query_knowledge_base.py  run_diagnostic_benchmark.py  run_live_demo_check.py  smoke_real_observability.py  stop_live_demo.sh
tests/: __init__.py  conftest.py  test_agent_tracing.py  test_approvals.py  test_async_investigation.py  test_benchmark.py  test_dynamic_replanning.py  test_evidence_graph.py  test_graph.py  test_incident_store.py  test_incidents_api.py  test_llm_client.py  test_observability_tools.py  test_planner_agent.py  test_reflection_agent.py  test_report_agent.py  test_static_ui.py  test_tool_gateway.py
(+108 files in other folders)
