[project]
name = "omniops-agent"
version = "0.1.0"
description = "Week 1 MVP skeleton for OmniOps Agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.0",
    "langchain>=0.3.30",
    "langgraph>=0.6.11",
    "pydantic>=2.13.4",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
